# optir

./: Cargo.toml  README.md  shell.nix
nix/: sources.json
src/: analysis.rs  bind.rs  cfg.rs  extract.rs  language.rs  lib.rs  main.rs  rewrite.rs
src/cfg/: build_rvsdg.rs  from_structured.rs  live_variables.rs  restructure.rs
