[package]
name = "optir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
egg = { version = "0.8.0", features = ["lp"] }
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
